removed and updated

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta name="robots" content="nofollow">
+    <meta name="googlebot" content="noindex">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,11 +12,13 @@
 <body>
     <div class='tableauPlaceholder' id='viz1665410134435' style='position: relative'>
         <noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sc&#47;ScaryAirplanes&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript>
-        <object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> 
+        <object class='tableauViz'  style='display:none;'>
+        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+        <param name='embed_code_version' value='3' /> 
         <param name='site_root' value='' />
         <param name='name' value='ScaryAirplanes&#47;Dashboard1' />
         <param name='tabs' value='no' />
-        <param name='toolbar' value='yes' />
+        <param name='toolbar' value='no' />
         <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sc&#47;ScaryAirplanes&#47;Dashboard1&#47;1.png' /> 
         <param name='animate_transition' value='yes' />
         <param name='display_static_image' value='yes' />
@@ -22,6 +26,7 @@
         <param name='display_overlay' value='yes' />
         <param name='display_count' value='yes' />
         <param name='language' value='en-US' />
+        <param name='showShareOptions' value='false' />
         </object>
     </div>
     <script type='text/javascript'>var divElement = document.getElementById('viz1665410134435'); 
@@ -35,4 +40,3 @@
     </script>
 </body>
 <script type="text/javascript" src="static/js/logic.js"></script>
-</html>
